3.0.6
=====
- Added automatic negotiation of ContentType at the ViewResolver depending on view name (file extension).


3.0.5
=====
- (No changes)


3.0.4
=====
- Improved startup times at the template engine by means of lazy initialization of dialect artifacts.
- Improve behaviour of SpringContextUtils.getApplicationContext(): avoided cast exception when ApplicationContext
  is not available.


3.0.3
=====
- Improved JavaDoc API.


3.0.2
=====
- Fixed ThymeleafView not having public constructors, which made separate definition
  of View beans impossible.
- Improved handling of View beans by ThymeleafViewResolver so that beans with scope
  prototype of class ThymeleafView can now be properly used.


3.0.1
=====
- Fixed registered custom editor not used for nested property path with double-brace syntax.


3.0.0
=====
See: http://forum.thymeleaf.org/Thymeleaf-3-0-is-here-td4029676.html
     http://www.thymeleaf.org/doc/articles/thymeleaf3migration.html
- New event-based template processing engine
- Full HTML5 support, new parsing infrastructure
- Thymeleaf 3.0 Template Mode set
- Inlined output expressions
- New syntax for textual template modes
- Refactoring of the inlining mechanism
- New Processor API
- New Pre-Processor and Post-Processor APIs
- New Dialect API
- Refactoring of the Template Resolution API
- Refactoring of the Context API
- Refactoring of the Message Resolution API
- Fragment Expressions
- The NO-OP token
- Decoupled Template Logic
- New extension point: Link Builders
- Throttled template execution


2.1.4
=====
- Fixed th:errorclass not picking the correct form property name when selected object expression
  has more than one level.
- Fixed bad selection of th:field processor when the "type" attribute is computed in runtime.
- Fixed NotReadablePropertyException on conversion service called on bound bean's method
  instead of property.
- Set ApplicationContext to RedirectViews so that RequestDataValueProcessor can modify the